# django-nextjs-nix

./: README.md  flake.nix
backend/: .gitignore  flake.nix  pyproject.toml
backend/core/: settings.py  urls.py
fronted/: .gitignore  flake.nix  package.json
fronted/pages/: index.js
