[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
packages = [
  {include = "core"},
]
authors = ["Your Name <you@example.com>"]


[tool.poetry.dependencies]
python = "^3.9"
Django = "4.0.7"
pytest = "^7.1.3"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
